<resources>
    <string name="app_name">LuminSight</string>
    <string name="mulai">Mulai</string>
    <string name="selamatdatang">Selamat Datang !</string>
    <string name="silahkanlogin">Silahkan login terlebih dahulu</string>
    <string name="masukgoogle">Masuk dengan google</string>
    <string name="cekmata">Cek Mata Sekarang</string>
    <string name="artikel">Artikel Kesehatan Mata</string>
    <string name="about">About Apps</string>
    <string name="halmetode">Halaman LuminSight</string>
    <string name="masukkan">Masukkan Gambar </string>
    <string name="masukkan2">Masukkan Gambar</string>
    <string name="kriteria">Klik dibawah untuk mengunggah gambar dari galeri/kamera</string>
    <string name="cari">Deteksi</string>
    <string name="tgl">Sun, 23 Mei 2023</string>
    <string name="artikellengkap">Halaman Detail Artikel</string>
    <string name="tittleabout">Tentang Aplikasi</string>
    <string name="isiabout">Test</string>
    <string name="anda_yakin_ingin_keluar">Anda yakin ingin keluar</string>
    <string name="batal">Batal</string>
    <string name="ya">Ya</string>
    <string name="hasil">Hasil ditemukan !</string>
    <string name="diagnosa">Dibawah ini adalah diagnosa anda</string>
    <string name="jaga">Selalu jaga kesehatan</string>
    <string name="webid">129976350829-o0fr98l7hckh6em2njkufktvsu5vgnd8.apps.googleusercontent.com</string>
</resources>