<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.metode.MetodeActivity">
    <LinearLayout
        android:paddingHorizontal="@dimen/_12sdp"
        android:background="@color/bg_pink_tua"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/baseline_arrow_back_ios_24"/>
        <TextView
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/tv_nama"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/halmetode" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_20ssp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kriteria"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"/>
    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan2"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:textSize="@dimen/_12ssp"/>
    <ImageView
        android:id="@+id/img_add"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/addimage"/>
    <Button
        android:textColor="@color/white"
        android:id="@+id/btn_cari"
        android:text="@string/cari"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/card_pink"/>
</LinearLayout>