<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp"
    android:background="@drawable/card_main">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/anda_yakin_ingin_keluar"
        android:textStyle="bold"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_25sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:id="@+id/btn_batal"
            android:text="@string/batal"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_pink"/>
        <Button
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:id="@+id/btn_ok"
            android:text="@string/ya"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_putih"/>
    </LinearLayout>
</LinearLayout>